--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <div class="hero" style="background-image: url('images/bg.png'); ">
 
-    <div class="container" style="">
+    <div class="container" >
 
       <div class="row">
         <div class="col-12 col-md-10 col-lg-8">
@@ -104,17 +104,73 @@
 
           <h5 style="color: #fff; text-transform: capitalize; margin-top: 1rem;">Get an offer in minutes, sell in a matter of days.</h5>
 
-        </div>
+          </div>
 
         <!--end of col-->
+
+        </div>
 
       </div>
 
     </div>
-
-  </div>
   </div>
 
+
+<div class="container hero" style="">
+
+    <div class="col-12 ">
+      <div class="Rectangle-top-left">
+      </div>
+      <div class="Rectangle-bottom-right">
+      </div>
+      <div style="width: 65vw;max-width: 65vw;margin: auto;" class="justify-content-center">
+        <h1 class="justify-content-center" style="text-align: center; font-weight: bolder; padding-top: 2rem;">
+          The keys to your home
+        </h3>
+        <p class="justify-content-center" style="text-align: center; font-weight: bolder;">
+          Here's how we cut out the unnecessary steps to make selling your home easy, fast, and stress-free.
+        </p>
+
+
+        <div class="row" style="margin-top: 10%;margin-bottom: 10%;">
+          <div class="col-md-4 step-1 col-sm-12">
+            <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
+              Step 1
+            </h3>
+            <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
+              Get an offer in minutes
+            </p>
+            <p class="justify-content-center text-white" style="text-align: center;">
+              See your preliminary offer in just a few easy steps.
+            </p>
+          </div>
+          <div class="col-md-4 step-2 col-sm-12">
+            <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder; ">
+              Step 2
+            </h3>
+            <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
+              Get an offer in minutes
+            </p>
+            <p class="justify-content-center text-white" style="text-align: center;">
+              See your preliminary offer in just a few easy steps.
+            </p>
+          </div>
+          <div class="col-md-4 step-3 col-sm-12">
+            <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder; ">
+              Step 3
+            </h3>
+            <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
+              Do a video walkthrough 
+            </p>
+            <p class="justify-content-center text-white" style="text-align: center;">
+              Show us your home so we can make our best offer.
+            </p>
+          </div>
+        </div>
+    </div>
+
+  </div>
+</div>
 
 
   <script src="js/jquery-3.3.1.min.js"></script>
