--- a/new/website-menu-08/index.html
+++ b/new/website-menu-08/index.html
@@ -20,6 +20,8 @@
 
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/Prev.css">
+
 
   <title>Website Menu #8</title>
 </head>
@@ -124,12 +126,11 @@
       </div>
 
 
-
       <div class="row" style="padding: 10%; ">
         <div class="col-md-4 step-1 col-sm-12">
           <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
             Step 1
-          </h1>
+          </h3>
           <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
             Get an offer in minutes
           </p>
@@ -140,7 +141,7 @@
         <div class="col-md-4 step-2 col-sm-12">
           <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder; ">
             Step 2
-          </h1>
+          </h3>
           <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
             Do a video walkthrough 
           </p>
@@ -151,7 +152,7 @@
         <div class="col-md-4 step-3 col-sm-12">
           <h1 class="justify-content-center text-white" style="text-align: center; font-weight: bolder; ">
             Step 3
-          </h1>
+          </h3>
           <p class="justify-content-center text-white" style="text-align: center; font-weight: bolder;">
             Close and move, stress-free
           </p>
